--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "@mui/icons-material": "^5.15.11",
+    "@mui/material": "^5.15.11",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0"
   }
 }
